--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @font-face {
   font-family: "Grozen Medical";
   src: url("../fonts/grozenmedical/GROZEN-MEDICAL-Light.otf") format("opentype");
@@ -471,6 +472,43 @@ main {
   #s5-container {
     border-radius: 12px;
   }
+  #s5-middle p {
+    padding-left: 200px !important;
+    padding-bottom: 165px !important;
+    padding-top: 100px;
+    font-size: 0.75em !important;
+  }
+  #tabela-de-planos, #confirmação-planos {
+    display: none !important;
+  }
+  #s6 {
+    display: flex;
+    flex-direction: column;
+  }
+  #s6 img {
+    padding-top: 80px;
+    width: 180px !important;
+  }
+  #s6 #planos-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding-top: 50px;
+    gap: 32px;
+  }
+  #s6 #planos-mobile button {
+    width: 200px;
+  }
+  #s6 #planos-mobile #plano-info {
+    display: flex;
+    align-items: start;
+    padding: 16px;
+    background-color: white;
+    max-width: 80%;
+    height: 300px;
+    border-radius: 12px;
+  }
   .br-mob {
     display: none;
   }
@@ -571,6 +609,10 @@ main {
 
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+
+.resizableText {
+  font-family: "Roboto", sans-serif !important;
 }
 
 @keyframes scroll {
