--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,7 +12,10 @@
     font-style: normal;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 $font-1: 'Grozen Medical', sans-serif;
+$font-2: 'Roboto', sans-serif;
 
 * {
     padding: 0;
@@ -557,6 +560,50 @@ main {
         border-radius: 12px;
     }
 
+    #s5-middle p {
+        padding-left: 200px !important;
+        padding-bottom: 165px !important;
+        padding-top: 100px;
+        font-size: 0.75em !important;
+    }
+
+    #tabela-de-planos, #confirmação-planos {
+        display: none !important;
+    }
+
+    #s6 {
+        display: flex;
+        flex-direction: column;
+
+        img {
+            padding-top: 80px;
+            width: 180px !important;
+        }
+
+        #planos-mobile {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            padding-top: 50px;
+            gap: 32px;
+
+            button {
+                width: 200px;
+            }
+
+            #plano-info {
+                display: flex;
+                align-items: start;
+                padding: 16px;
+                background-color: white;
+                max-width: 80%;
+                height: 300px;
+                border-radius: 12px;
+            }
+        }
+    }
+
     .br-mob {
         display: none;
     }
@@ -680,6 +727,10 @@ main {
     'wght' 400,
     'GRAD' 0,
     'opsz' 24
+}
+
+.resizableText {
+    font-family: $font-2 !important;
 }
 
 @keyframes scroll {
